[package]
name = "udp_controllers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
laminar = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
winput = "0.2.5"
vigem-client = "0.1.2"